--- a/SouthWorks/Web.config
+++ b/SouthWorks/Web.config
@@ -12,10 +12,18 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+     <connectionStrings>  
+      <add name="SouthWorkDB" connectionString="Data Source=(local)\SQLEXPRESS;Database=SWEvents;Integrated Security=true;Pooling=False" />  
+    </connectionStrings>  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="4.0" />
     <caching>
+        <sqlCacheDependency enabled="true">
+        <databases>
+          <add name="SouthWorkDBCache" connectionStringName="SouthWorkDB" pollTime="500"/>
+        </databases>
+      </sqlCacheDependency>
       <outputCacheSettings>
         <outputCacheProfiles>
           <add name="CacheEvents" duration="3600" varyByParam="iDisplayStart;iDisplayLength;sSearch" />
