--- a/web.config
+++ b/web.config
@@ -1,3 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
+    <system.webServer>
+        <caching>
+            <profiles>
+                <add extension=".asp" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="00:30:30" />
+            </profiles>
+        </caching>
+        <directoryBrowse enabled="true" />
+    </system.webServer>
 </configuration>
